# aubo_robot

aubo_joint_controller/: CMakeLists.txt  package.xml
aubo_joint_controller/include/: canbus.h  jointcmd.h  robotconnect.h
aubo_joint_controller/launch/: aubo_joint_controller.launch
aubo_joint_controller/lib/: libArmConnect.so.1.0.1  libArmConnect.so.1.0.1.0
aubo_joint_controller/src/: aubo_joint_controller_node.cpp
aubo_pad/: CMakeLists.txt  package.xml
aubo_pad/launch/: aubo_pad.launch
aubo_pad/src/: aubo_pad.cpp
