<?xml version="1.0"?>
<package>
  <name>aubo_joint_controller</name>
  <version>0.0.5</version>
  <description>The aubo_joint_controller package</description>
  
  <author email="rnavarro@robotnik.es">Jose Rapado</author>

  <maintainer email="jmrapado@robotnik.es">Jose Rapado</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
